@@ -1,3 +1,8 @@
+2001-01-17  Dominique Dumont  <domi@komarr.grenoble.hp.com> v1.022
+
+	* ObjScanner.pm (isPseudoHash): small bug fix
+	* Makefile.PL: added Tk in PREREQ_PM
+
 2001-01-12  Dominique Dumont  <domi@komarr.grenoble.hp.com> v1.021
 
 	* Makefile.PL: fixed Makefile.PL
